--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "expo": "^35.0.0",
     "expo-cli": "^3.4.1",
     "global": "^4.4.0",
