--- a/api-5-nearest/package.json
+++ b/api-5-nearest/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node",
     "dev": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "json:server": "json-server --watch src/data/db.json"
   },
   "keywords": [
     "5 nearest stations",
