--- a/api-5-nearest/package.json
+++ b/api-5-nearest/package.json
@@ -19,6 +19,7 @@
   "author": "André Luiz R. Arruda <andrebass27@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
   },
