--- a/api-idw/package.json
+++ b/api-idw/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon"
+    "start": "node",
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
